ast/Bela.java
/* Generated By:JavaCC: Do not edit this line. Bela.java */
import java.io.*;
import ast.*;
public class Bela implements BelaConstants {

  public static void main(String args[]) throws ParseException,IOException {

        Bela analisador = new Bela(new FileInputStream(args[0]));
        Prog arvore = analisador.Bela();

  }

//BELA -> MAIN FUNC?
  static final public Prog Bela() throws ParseException {
 Main main; ArrayList<Fun> funs= null; Fun f;
    main = Main();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FUNC:
      f = Func();
                           funs.add(f);
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    jj_consume_token(0);
 {if (true) return new Prog(main, funs);}
    throw new Error("Missing return statement in function");
  }

  static final public Main Main() throws ParseException {
 ArrayList<VarDecl> vars = null;
ArrayList <Comando> coms = null;
    jj_consume_token(MAIN);
    jj_consume_token(APAR);
    jj_consume_token(FPAR);
    jj_consume_token(ACHAVES);
    vars = Vardecl();
    coms = Seqcomandos();
    jj_consume_token(FCHAVES);
 {if (true) return new Main(vars, coms);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<VarDecl> Vardecl() throws ParseException {
  ArrayList<VarDecl> vars = new ArrayList();
  Token tipo;
  Token id;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      jj_consume_token(VAR);
      tipo = Tipo();
      id = jj_consume_token(ID);
      jj_consume_token(PONTOVIRGULA);
                                              vars.add(new Vardecl(tipo.image, id.image));
    }
   {if (true) return vars;}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<Comando> Seqcomandos() throws ParseException {
    ArrayList<Comando> coms = new ArrayList();
    Comando c;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case RETURN:
      case PRINTLN:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      c = Comando();
                    coms.add(c);
    }
     {if (true) return coms;}
    throw new Error("Missing return statement in function");
  }

  static final public Token Tipo() throws ParseException {
  Token t = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TFLOAT:
      t = jj_consume_token(TFLOAT);
      break;
    case TBOOL:
      t = jj_consume_token(TBOOL);
      break;
    case TVOID:
      t = jj_consume_token(TVOID);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
   {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public Comando Comando() throws ParseException {
  Token id = null;
  Exp exp = null;
  ArrayList<Comando> bloco = null;
  Comando result = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      id = jj_consume_token(ID);
             result = ComandoL(id);
      break;
    case IF:
      jj_consume_token(IF);
      exp = Exp();
      jj_consume_token(THEN);
      jj_consume_token(ACHAVES);
      bloco = Seqcomandos();
      jj_consume_token(FCHAVES);
      jj_consume_token(PONTOVIRGULA);
                                                                                      result = new CIf(0, exp, bloco);
      break;
    case WHILE:
      jj_consume_token(WHILE);
      exp = Exp();
      jj_consume_token(ACHAVES);
      bloco = Seqcomandos();
      jj_consume_token(FCHAVES);
      jj_consume_token(PONTOVIRGULA);
                                                                                  result = new CWhile(0, exp, bloco);
      break;
    case RETURN:
      jj_consume_token(RETURN);
      exp = Exp();
      jj_consume_token(PONTOVIRGULA);
                                         result = new CReturn(0, exp);
      break;
    case PRINTLN:
      jj_consume_token(PRINTLN);
      exp = Exp();
      jj_consume_token(PONTOVIRGULA);
                                          result = new CPrint(0, exp, bloco);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
   {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public Comando ComandoL(Token id) throws ParseException {
  Object exp = null;
  ArrayList<Exp> args = new ArrayList();
  Comando result = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATRIBUICAO:
      jj_consume_token(ATRIBUICAO);
      exp = ComandoLL(id);
    if (exp instanceof CReadInput){
      result = (CReadInput) exp;
    }else{
      result = new CAtribuicao(0, id.image, (Exp) exp);
    }
      break;
    case APAR:
      jj_consume_token(APAR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case APAR:
      case TRUE:
      case FALSE:
      case NUM:
      case ID:
        args = ListaExp();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(FPAR);
      jj_consume_token(PONTOVIRGULA);
                                                       result = new CChamadaFun(0, id.image, args);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
   {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public Object ComandoLL() throws ParseException {
  Exp exp = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case APAR:
    case TRUE:
    case FALSE:
    case NUM:
    case ID:
      exp = Exp();
      jj_consume_token(PONTOVIRGULA);
                              {if (true) return exp;}
      break;
    case READINPUT:
      jj_consume_token(READINPUT);
      jj_consume_token(APAR);
      jj_consume_token(FPAR);
      jj_consume_token(PONTOVIRGULA);
                                            {if (true) return new CReadInput(0, id.image);}
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Token Op() throws ParseException {
  Token op = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPADI:
      op = jj_consume_token(OPADI);
      break;
    case OPSUB:
      op = jj_consume_token(OPSUB);
      break;
    case OPMULT:
      op = jj_consume_token(OPMULT);
      break;
    case OPDIV:
      op = jj_consume_token(OPDIV);
      break;
    case OPAND:
      op = jj_consume_token(OPAND);
      break;
    case OPOR:
      op = jj_consume_token(OPOR);
      break;
    case OPMENOR:
      op = jj_consume_token(OPMENOR);
      break;
    case OPMAIOR:
      op = jj_consume_token(OPMAIOR);
      break;
    case OPIGUAL:
      op = jj_consume_token(OPIGUAL);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
   {if (true) return op;}
    throw new Error("Missing return statement in function");
  }

  static final public void Fator() throws ParseException {
  Token id = null;
  Token num = null;
  ArrayList<Exp> args = new ArrayList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      id = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case APAR:
        jj_consume_token(APAR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case APAR:
        case TRUE:
        case FALSE:
        case NUM:
        case ID:
          args = ListaExp();
          break;
        default:
          jj_la1[9] = jj_gen;
          ;
        }
        jj_consume_token(FPAR);
                                       {if (true) return new EChamadaFun(id.image, args);}
        break;
      default:
        jj_la1[10] = jj_gen;
     {if (true) return new EVar(id.image);}
      }
      break;
    case NUM:
      num = jj_consume_token(NUM);
                {if (true) return new EFloat(Float.parseFloat(num.image));}
      break;
    case TRUE:
      jj_consume_token(TRUE);
            {if (true) return new ETrue();}
      break;
    case FALSE:
      jj_consume_token(FALSE);
             {if (true) return new EFalse();}
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Exp() throws ParseException {
  Exp arg1 = null, arg2 = null;
  Token op = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case APAR:
      jj_consume_token(APAR);
      arg1 = Exp();
      op = Op();
      arg2 = Exp();
      jj_consume_token(FPAR);
                                                     {if (true) return new EOpExp(op.image, arg1, arg2);}
      break;
    case TRUE:
    case FALSE:
    case NUM:
    case ID:
      arg1 = Fator();
                  {if (true) return arg1;}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public ArrayList<Exp> ListaExp() throws ParseException {
  ArrayList<Exp> exps = new ArrayList();
  Exp exp;
    exp = Exp();
               exps.add(exp);
    ListaExpL(exps);
 {if (true) return exps;}
    throw new Error("Missing return statement in function");
  }

  static final public void ListaExpL(ArrayList<Exp> exps) throws ParseException {
  Exp exp;
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_3;
      }
      jj_consume_token(VIRGULA);
      exp = Exp();
                         exps.add(exp);
    }
  }

  static final public void Func() throws ParseException {
  Token name = null;
        ArrayList<ParamFormalFun> params = new ArrayList();;
        Token returnType = null;
        ArrayList<VarDecl> vars = new ArrayList();
        ArrayList<Comando> body = new ArrayList();
    label_4:
    while (true) {
      jj_consume_token(FUNC);
      returnType = Tipo();
      name = jj_consume_token(ID);
      jj_consume_token(APAR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TFLOAT:
      case TBOOL:
      case TVOID:
        params = ListaArg();
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      jj_consume_token(FPAR);
      jj_consume_token(ACHAVES);
      vars = Vardecl();
      body = Seqcomandos();
      jj_consume_token(FCHAVES);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FUNC:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_4;
      }
    }
   {if (true) return new Fun(name.image, params, returnType.image, vars, body);}
  }

  static final public void ListaArg() throws ParseException {
  ArrayList<ParamFormalFun> params = new ArrayList();
  Token id;
  Token type;
    type = Tipo();
    id = jj_consume_token(ID);
                           params.add(new ParamFormalFun(type.image, id.image));
    ListaArgL(params);
   {if (true) return params;}
  }

  static final public void ListaArgL(ArrayList<ParamFormalFun> params) throws ParseException {
  Token type;
  Token id;
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_5;
      }
      jj_consume_token(VIRGULA);
      type = Tipo();
      id = jj_consume_token(ID);
                                      params.add(new ParamFormalFun(type.image, id.image));
    }
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public BelaTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[17];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x0,0x40,0x350000,0x3800,0x350000,0xc00080,0x4080,0xc80080,0xff000000,0xc00080,0x80,0xc00000,0xc00080,0x0,0x3800,0x0,0x0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x4,0x0,0x10,0x0,0x10,0x18,0x0,0x18,0x1,0x18,0x0,0x18,0x18,0x2,0x0,0x4,0x2,};
   }

  /** Constructor with InputStream. */
  public Bela(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Bela(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new BelaTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Bela(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new BelaTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Bela(BelaTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(BelaTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List jj_expentries = new java.util.ArrayList();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[37];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 17; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 37; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
